--- a/.gitignore
+++ b/.gitignore
@@ -159,5 +159,16 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
-# new venv
+# Віртуальне середовище
 venv/
+
+# Файли Byte-compiled Python
+__pycache__/
+
+# Файл логів
+*.log
+
+# Інші тимчасові файли та кеш
+*.swp
+*.swo
+.DS_Storevenv/
